# yansilu

./: .gitattributes  .gitignore  README.md  WORKTREE.md  package-lock.json  package.json  wrangler.jsonc
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: ACCEPTANCE_CHECKLIST_YIJING_RICH.md  ACCEPTANCE_TESTS.md  AGENT_HARNESS_ARCHITECTURE_V1.md  AGENT_RUN_LOG_SCHEMA_V1.md  AI_AGENT_EVALUATION_AND_ACCEPTANCE_V1.md  AI_AGENT_IMPLEMENTATION_DISCOVERY_CHECKLIST.md  AI_AGENT_IMPLEMENTATION_DISCOVERY_REPORT_2026-05-10.md  AI_AGENT_INFRASTRUCTURE_NEXT_STEPS_2026-05-13.md  AI_AGENT_LAYER_MVP_IMPLEMENTATION_PLAN.md  AI_AGENT_LAYER_REQUIREMENTS_V1.md  AI_AGENT_LAYER_STORAGE_SCHEMA_V1.md  AI_AGENT_LAYER_WORKSTREAM_FRAMEWORK_V1.md  AI_ARTIFACT_SCHEMA_V1.md  AI_LEGACY_REVISED_MIGRATION_STATUS_2026-05-20.md  AI_PERMANENT_NOTE_ANALYSIS_GOAL.md  AI_PERMANENT_NOTE_ANALYSIS_PLAN.md  AI_PLATFORM_FOLLOWUP_MERGE_BATCH_2026-05-22.md  AI_PRIVACY_PERMISSION_AND_ORIGINALITY_POLICY_V1.md  AI_REVIEW_FIRST_CORE_TEST_MATRIX_2026-05-20.md  AI_SHARED_MODELS_2026-05-18.md  AI_TOOL_CONTRACTS_V1.md  AI_WORKSTREAM_BACKLOG_2026-05-18.md  API.md  AUTH_AND_PAYMENT_FLOW_V1.md  AUTH_STATE_STORAGE_V1.md  AUTO_UPDATE.md  CODEX_ENCODING_PROMPT_SNIPPETS.md  CODEX_IMPLEMENTATION_CONSTRAINTS.md  CONNECTORS_MVP_CONTRACT.md  CONTEXT_HANDOFF_EDITOR_QA_2026-05-09.md  CONTEXT_HANDOFF_GROWTH_STORIES_2026-05-09.md  CONTEXT_HANDOFF_WEBSITE_2026-05-09.md  CONTEXT_PACK_SCHEMA_V1.md  DATABASE_SCHEMA.md  (+123 more)
(+1091 files in other folders)
